--- a/src/horn-chart.html
+++ b/src/horn-chart.html
@@ -4,6 +4,7 @@
 <!-- Define your custom element -->
 <polymer-element name="horn-chart">
 
+    <div>This is a chart</div>
     <script>
         Polymer('horn-chart', {
             // Fires when an instance of the element is created
