--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
     <link rel="import" href="src/horn-chart.html">
 </head>
 <body>
+    <style>
+        font-family: Helvetica,Arial,sans-serif;
+    </style>
 
     <!-- Using Custom Elements -->
+    <horn-chart key="F" mode="Blues"></horn-chart>
+    <horn-chart mode="Dorian"></horn-chart>
     <horn-chart></horn-chart>
 
 </body>
