--- a/src/horn-chart.html
+++ b/src/horn-chart.html
@@ -18,23 +18,29 @@
                 padding: 10px;
             }
         </style>
-        <div>
-            This will be a {{instrument}} chart
-            <template if="{{ key || mode}}">
-                in the key of {{key}} {{mode}}
-            </template>
-        </div>
+        This will be a {{instrument}} chart
+        <template if="{{key || mode}}">
+            in the key of {{key}} {{mode}}
+        </template>
     </template>
+
+    <script src="../bower_components/lodash/dist/lodash.compat.js"></script>
+    <script src="horns.js"></script>
+
     <script>
         Polymer('horn-chart', {
             key: undefined,
 
             mode: undefined,
 
+            horn: new Horn(),
+
             instrument: 'trombone',
 
             // Fires when an instance of the element is created
             created: function() {
+                console.log("Horn:", this.horn);
+                //this.horn = new Horn();
             },
 
             // Fires when the "<polymer-element>" has been fully prepared
