Added horn definitions, basic note rendering

--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 </head>
 <body>
     <style>
-        font-family: Helvetica,Arial,sans-serif;
+        body {
+            font-family: Helvetica,Arial,sans-serif;
+        }
     </style>
 
     <!-- Using Custom Elements -->
     <horn-chart key="F" mode="Blues"></horn-chart>
-    <horn-chart mode="Dorian"></horn-chart>
+    <horn-chart instrument="trumpet" mode="Dorian"></horn-chart>
     <horn-chart></horn-chart>
 
 </body>
