--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </style>
 
     <!-- Using Custom Elements -->
-    <horn-chart key="F" mode="Blues"></horn-chart>
-    <horn-chart instrument="trumpet" mode="Dorian"></horn-chart>
+    <horn-chart key="F" showScale="Blues"></horn-chart>
+    <horn-chart instrument="trumpet" showScale="Dorian"></horn-chart>
     <horn-chart></horn-chart>
 
 </body>
