Made header optional

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     </style>
 
     <!-- Using Custom Elements -->
-    <horn-chart key="F" showScale="Blues"></horn-chart>
+    <h2>F Blues trombone chart with info text</h2>
+    <horn-chart key="F" showScale="Blues" info="true"></horn-chart>
+    <h2>C dorian trumpet chart, no info text</h2>
     <horn-chart instrument="trumpet" showScale="Dorian"></horn-chart>
-    <horn-chart></horn-chart>
 
 </body>
 </html>
