--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </style>
 
     <!-- Using Custom Elements -->
-    <h2>C Lydian trumpet chart with info text</h2>
+    <h2>C Lydian trombone chart with info text</h2>
     <horn-chart instrument="trombone" showScale="Lydian" info="true"></horn-chart>
-    <h2>F Blues trombone chart, no info text</h2>
-    <horn-chart key="F" showScale="Blues"></horn-chart>
+    <h2>F Blues trumpet chart, no info text</h2>
+    <horn-chart instrument="trumpet" key="F" showScale="Blues"></horn-chart>
 
 </body>
 </html>
